fixing horizontal scroll and add cart

--- a/web/themes/custom/mcgreen_acres_theme/css/custom.css
+++ b/web/themes/custom/mcgreen_acres_theme/css/custom.css
@@ -51,6 +51,11 @@ figure {
   .clv_right_header .clv_menu .clv_menu_nav {
     background-color: rgb(0,93,40);
   }
+
+  .index_v2.clv_main_wrapper .clv_right_header .clv_menu .clv_menu_nav > ul > li:last-child > a {
+    border-right: none;
+    padding-right: 0;
+  }
 }
 
 .clv_right_header .clv_menu .cart_nav > ul > li > a > svg > path{
